kanc/src/tests/sample_code/should_fail/single_file/parse/labeled_params/dash_before_tilde.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let f = fun _(-~x: Nat): Nat {
    Nat.o
};
